added image scaling

--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -16,7 +16,7 @@
     <div id="full-container-sm">
         <div id="moviescreen"></div>
 
-        <div id ="dragbox" style="background-color: white;"></div>
+        <div id ="response_region" style="background-color: white;"></div>
 
         <hr />
 
