attempting to fix radio buttons

--- a/psiturk/templates/exp.html
+++ b/psiturk/templates/exp.html
@@ -44,6 +44,7 @@
         <link rel="stylesheet" href="/static/css/hg.css" type="text/css" />
         <link rel="stylesheet" href="/static/css/task.css" type="text/css" />
         <link rel="stylesheet" href="/static/css/slider.css" type="text/css" />
+        <link rel="stylesheet" href="/static/css/radio.css" type="text/css" />
 
     </head>
     <body>
