--- a/psiturk/templates/ad.html
+++ b/psiturk/templates/ad.html
@@ -71,10 +71,11 @@
 
 							<h1>Call for participants</h1>
 							<p>
-								The Computational Cognitive Science Group at MIT is looking for online participants
+								The Cognitive Computation and Neural Computation
+								Lab at Yale is looking for online participants
 								for a brief psychology experiment. The only requirements
 								are that you are at least 18 years old and are a fluent English
-								speaker.  The task will take ~15-20 minutes and will pay $2.50.
+								speaker.  The task will take ~20-25 minutes and will pay $3.00.
 							</p>
 							<div class="alert alert-danger">
 								<strong>This task can only be completed once.</strong>
