--- a/psiturk/templates/consent.html
+++ b/psiturk/templates/consent.html
@@ -26,9 +26,9 @@
                 <div class="legal well">
                     <p>
                      By answering the following questions, you are participating in a study
-                     being performed by cognitive scientists in the MIT Department of Brain and
-                     Cognitive Science. The study usually takes ~15-20 minutes. If you have questions
-                     about this research, please contact us at <a href="k2smith@mit.edu">k2smith@mit.edu</a>.
+                     being performed by cognitive scientists in the Department
+                     of Psychology at Yale University. The study usually takes ~20-25 minutes. If you have questions
+                     about this research, please contact us at <a href="cncl-participate@yale.edu">cncl-participate@yale.edu</a>.
                      </p>
 
                      <p>By selecting the "I Agree" button below, you
