attempting to debug consent

--- a/psiturk/templates/quiz.html
+++ b/psiturk/templates/quiz.html
@@ -17,24 +17,26 @@
           <form id="prequiz" action="debrief" method="post">
             <div class="question">
               <p class="questiontext">
-              What are we asking you to determine in this task?
+                Which of the following is <b>true</b>:
               <select id="taskDef" name="featureAttend">
                 <option value="noresp" SELECTED></option>
-            		<option value="a">Which color ball rolled fastest</option>
-            		<option value="b">The weight that each color indicates</option>
-            		<option value="c">The final position of each ball</option>
+            		<option value="a">The blue dot is always one of the initially
+            		highlighted four targets</option>
+            		<option value="b">The number of dots in a video changes</option>
+            		<option value="c">All of the dots are present throughout the
+            		video </option>
               </select>
               </p>
             </div>
 
             <div class="question">
               <p class="questiontext">
-                  Which one of the following statements is <b>false</b>.
+                  Which of the following statements is <b>false</b>:
               <select id="trueFalse" name="constantObj">
                 <option value="noresp" SELECTED></option>
-                <option value="a">Each video will only play once.</option>
-                <option value="b">If the red ball appears heavy in one trial, it is always heavy</option>
-                <option value="c">Some trials will have 3 different colors while other will have 2</option>
+                <option value="a">Each video will only play once</option>
+                <option value="b">Maintain an arm-length distance from your monitor</option>
+                <option value="c">Some trials will have 9 dots</option>
               </select>
               </p>
             </div>
