--- a/psiturk/static/css/radio.css
+++ b/psiturk/static/css/radio.css
@@ -64,7 +64,7 @@
 /* Individual Controls
  ------------------------------------------------------------- */
 .radio {
-  display: block;
+  display: inline-block;
   padding-right: 20px;
   font-size: 18px;
   line-height: 49px;
