--- a/psiturk/templates/consent.html
+++ b/psiturk/templates/consent.html
@@ -24,26 +24,98 @@
                 <h1>We need your consent to proceed</h1>
                 <hr />
                 <div class="legal well">
-                    <p>
-                     By answering the following questions, you are participating in a study
-                     being performed by cognitive scientists in the Department
-                     of Psychology at Yale University. The study usually takes ~20-25 minutes. If you have questions
-                     about this research, please contact us at <a href="cncl-participate@yale.edu">cncl-participate@yale.edu</a>.
-                     </p>
 
-                     <p>By selecting the "I Agree" button below, you
-                     acknowledge that:</p>
-                   <ul>
-                     <li>You must be at least 18 years old to participate.</li>
-                     <li>Your participation in this research is voluntary.</li>
-                     <li>You may decline to answer any or all of the following questions by closing this window in your browser.</li>
-                     <li>You may decline further participation, at any time, without adverse consequences.</li>
-                     <li>Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</li>
-                   </ul>
+                  <!-- <p> -->
+                  <!--   <b>Purpose:</b> We are conducting research on how we see, -->
+                  <!--   think about, and interact with objects and people in our physical environment. -->
+                  <!-- </p> -->
 
-                    <button type="button" class="btn btn-default btn-sm" onClick="window.print();">
+                  <!-- <p> -->
+                  <!--   <b>Brief description:</b> In this experiment, you will make -->
+                  <!--   judgments about various properties of objects and/or agents. -->
+                  <!--   In total, we think making these judgments will take less than 30 minutes to complete. -->
+                  <!-- </p> -->
+
+                  <!-- <p> -->
+                  <!--   <b>Procedures:</b> For each judgement, you will see an image -->
+                  <!--   or a brief video of static or moving objects and/or agents and -->
+                  <!--   your job is to make judgments about the objects or agents -->
+                  <!--   including the shape or positions of objects or the goals and -->
+                  <!--   actions of agents. You will receive $3.00 upon completing the experiment. -->
+                  <!-- </p> -->
+
+                  <!-- <p> -->
+                  <!--   <b>Risks and Benefits:</b> Completing this task poses no more -->
+                  <!--   risk of harm to you than do the experiences of everyday life -->
+                  <!--   (e.g., from working on a computer). Although this study will -->
+                  <!--   not benefit you personally, we hope it will contribute to the -->
+                  <!--   advancement of our understanding of the human mind. -->
+                  <!-- </p> -->
+
+                  <!-- <p> -->
+                  <!--   <b>Confidentiality:</b> All of the responses you provide -->
+                  <!--   during this study will be anonymous. You will not be asked -->
+                  <!--   to provide any identifying information, such as your name, -->
+                  <!--   in any of the questionnaires. Typically, only the researchers -->
+                  <!--   involved in this study and those responsible for research -->
+                  <!--   oversight will have access to the information you provide. -->
+                  <!--   However, we may also share the data with other researchers -->
+                  <!--   so that they can check the accuracy of our conclusions; -->
+                  <!--   this will not impact you because the data are anonymous. -->
+                  <!-- </p> -->
+
+                  <!-- <p> -->
+                  <!--   The researcher will not know your name, and no identifying -->
+                  <!--   information will be connected to your survey answers in any -->
+                  <!--   way. The survey is therefore anonymous. However, your -->
+                  <!--   account is associated with an mTurk number that the -->
+                  <!--   researcher has to be able to see in order to pay you, -->
+                  <!--   and in some cases these numbers are associated with public -->
+                  <!--   profiles which could, in theory, be searched. For this reason, -->
+                  <!--   though the researcher will not be looking at anyone’s public -->
+                  <!--   profiles, the fact of your participation in the research -->
+                  <!--   (as opposed to your actual survey responses) is technically -->
+                  <!--   considered “confidential” rather than truly anonymous. -->
+                  <!-- </p> -->
+
+                  <!-- <p> -->
+                  <!--   <b>Voluntary Participation:</b> Your participation in this -->
+                  <!--   study is voluntary. You are free to decline to participate, -->
+                  <!--   to end your participation at any time for any reason, or to -->
+                  <!--   refuse to answer any individual question. -->
+                  <!-- </p> -->
+
+                  <!-- <p> -->
+                  <!--   <b>Questions:</b> If you have any questions about this study, -->
+                  <!--   you may contact Ilker Yildirim at ilker.yildirim@yale.edu. -->
+                  <!--   If you would like to talk with someone other than the -->
+                  <!--   researchers to discuss problems or concerns, to discuss -->
+                  <!--   situations in the event that a member of the research team -->
+                  <!--   is not available, or to discuss your rights as a research -->
+                  <!--   participant, you may contact, and mention HSC number 2000025930: -->
+                  <!-- </p> -->
+
+                  <!-- <ul> -->
+                  <!--   <li> Yale University Human Subjects Committee -->
+                  <!--   <li> Box 208010, New Haven, CT 06520-8010 -->
+                  <!--   <li> (203) 785-4688; human.subjects@yale.edu -->
+                  <!-- </ul> -->
+
+                  <!-- <\!-- <p>Additional information is available at http://www.yale.edu/hrpp/participants/index.html</p> -\-> -->
+
+                  <!-- <p> -->
+                  <!--   <b>Agreement to participate:</b> By clicking the "Begin" -->
+                  <!--   button below, you acknowledge that you have read -->
+                  <!--   the above information, and agree to participate in -->
+                  <!--   the study. You must be at least 18 years of age to -->
+                  <!--   participate; agreeing to participate confirms you -->
+                  <!--   are 18 years of age or older. Click the BEGIN button to -->
+                  <!--   confirm your agreement and continue. -->
+                  <!-- </p> -->
+
+                  <button type="button" class="btn btn-default btn-sm" onClick="window.print();">
                     <span class="glyphicon glyphicon-print"></span> Print a copy of this
-                    </button>
+                  </button>
                 </div>
 
                 <hr />
@@ -51,8 +123,9 @@
                 <br />
 
                 <center>
-                    <button type="button" class="btn btn-primary btn-lg" onClick="window.location='/exp?hitId={{ hitid }}&assignmentId={{ assignmentid }}&workerId={{ workerid }}'">
-                    <span class="glyphicon glyphicon-ok"></span> I agree
+                  <button type="button" class="btn btn-primary btn-lg"
+                          onClick="window.location='/exp?hitId={{ hitid }}&assignmentId={{ assignmentid }}&workerId={{ workerid }}'">
+                    <span class="glyphicon glyphicon-ok"></span> Begin
                     </button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
