--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -14,6 +14,7 @@
     <hr />
 
     <div id="full-container-sm">
+        <div id ="scale_region" style="background-color: white;"></div>
         <div id="moviescreen"></div>
 
         <div id ="response_region" style="background-color: white;"></div>
