--- a/psiturk/templates/consent.html
+++ b/psiturk/templates/consent.html
@@ -95,13 +95,13 @@
                     participant, you may contact, and mention HSC number 2000025930:
                   </p>
 
-                  <ul>
-                    <li> Yale University Human Subjects Committee
-                    <li> Box 208010, New Haven, CT 06520-8010
-                    <li> (203) 785-4688; human.subjects@yale.edu
-                  </ul>
+                  <dl>
+                    <dd> Yale University Human Subjects Committee
+                    <dd> Box 208010, New Haven, CT 06520-8010
+                    <dd> (203) 785-4688; human.subjects@yale.edu
+                  </dl>
 
-                  <p>Additional information is available at http://www.yale.edu/hrpp/participants/index.html</p>
+		  <p>Additional information is available <a href src="http://www.yale.edu/hrpp/participants/index.html">here</a>.</p>
 
                   <p>
                     <b>Agreement to participate:</b> By clicking the "Begin"
