added intro media

--- a/psiturk/templates/quiz.html
+++ b/psiturk/templates/quiz.html
@@ -18,7 +18,7 @@
             <div class="question">
               <p class="questiontext">
                 Which of the following is <b>true</b>:
-              <select id="taskDef" name="featureAttend">
+              <select id="trueFalse1" name="featureAttend">
                 <option value="noresp" SELECTED></option>
             		<option value="a">The blue dot is always one of the initially
             		highlighted four targets</option>
@@ -32,7 +32,7 @@
             <div class="question">
               <p class="questiontext">
                   Which of the following statements is <b>false</b>:
-              <select id="trueFalse" name="constantObj">
+              <select id="trueFalse2" name="constantObj">
                 <option value="noresp" SELECTED></option>
                 <option value="a">Each video will only play once</option>
                 <option value="b">Maintain an arm-length distance from your monitor</option>
