--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -1,20 +1,20 @@
 <div id="full-container">
-	  <br>
+	<br>
+        <div id ="scale_region" style="background-color: white;"></div>
 	  <div id="moviescreen">
 	  </div>
 	  <div id="register">
-		    <br>
+		  <br>
+		    <div id ="response_region" style="background-color: white;"></div>
 
-        <div id ="dragbox" style="background-color: white;"></div>
-
-        <hr />
+		    <hr />
 		    <div id="centerdiv">
-			      <button id="nextbutton" class="incenterdiv btn btn-success btn-lg" disabled>Select</button>
-			      <br>
-            <hr />
-			      <span id="progress" class="incenterdiv" style="margin-top: 15px;">0/0</span>
-			      <br>
-			      <button id="reloadbutton" class="incenterdiv btn btn-success btn-med" style="display: none;">Reload Movie</button>
+			    <button id="nextbutton" class="incenterdiv btn btn-success btn-lg" disabled>Select</button>
+			    <br>
+				<hr />
+				<span id="progress" class="incenterdiv" style="margin-top: 15px;">0/0</span>
+				<br>
+				<button id="reloadbutton" class="incenterdiv btn btn-success btn-med" style="display: none;">Reload Movie</button>
 		    </div>
 	  </div>
 </div>
