--- a/psiturk/static/css/radio.css
+++ b/psiturk/static/css/radio.css
@@ -76,8 +76,8 @@
   opacity: .5;
 }
 .radio input {
-  height: 1px;
-  width: 1px;
+  height: 2px;
+  width: 2px;
   opacity: 0;
 }
 .radio input:checked + .outer .inner {
@@ -86,11 +86,12 @@
   opacity: 1;
 }
 .radio input:checked + .outer {
-  border: 3px solid #f08b3b;
+  /* border: 5px solid #f08b3b; */
+  border: 5px solid #fff;
 }
 .radio input:focus + .outer .inner {
-  -webkit-transform: scale(1);
-  transform: scale(1);
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
   opacity: 1;
   background-color: #e67012;
 }
@@ -106,12 +107,12 @@
 }
 .radio .inner {
   transition: all 0.25s ease-in-out;
-  height: 16px;
-  width: 16px;
+  height: 11px;
+  width: 11px;
   -webkit-transform: scale(0);
   transform: scale(0);
   display: block;
-  margin: 2px;
+  margin: 1px;
   border-radius: 50%;
   background-color: #f08b3b;
   opacity: 0;
