added some formatting touch ups

--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -17,7 +17,8 @@
         <div id ="scale_region" style="background-color: white;"></div>
         <div id="moviescreen"></div>
 
-        <div id ="response_region" style="background-color: white;"></div>
+        <!-- <div id ="response_region" style="background-color: white;"></div> -->
+		    <div id ="response_region" style="background-color: white; margin=auto; align-self:center;text-align:center"></div>
 
         <hr />
 
