--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -5,7 +5,8 @@
 	  </div>
 	  <div id="register">
 		  <br>
-		    <div id ="response_region" style="background-color: white;"></div>
+		    <div id ="response_region" style="background-color: white; margin=auto; align-self:center;text-align:center"></div>
+
 
 		    <hr />
 		    <div id="centerdiv">
