fixed debug lint in intro, updated button

--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -10,7 +10,7 @@
 
 		    <hr />
 		    <div id="centerdiv">
-			    <button id="nextbutton" class="incenterdiv btn btn-success btn-lg" disabled>Select</button>
+			    <button id="nextbutton" class="incenterdiv btn btn-success btn-lg" disabled>Next</button>
 			    <br>
 				<hr />
 				<span id="progress" class="incenterdiv" style="margin-top: 15px;">0/0</span>
