--- a/psiturk/templates/ad.html
+++ b/psiturk/templates/ad.html
@@ -53,10 +53,13 @@
 	</head>
 	<body>
 		<div id="container-not-an-ad" class="media">
-			<div class="media-left pull-left" href="#">
-						<!-- REPLACE THE LOGO HERE WITH YOUR  UNIVERSITY, LAB, or COMPANY -->
-						<img id="adlogo" src="{{ server_location }}/static/images/university.png" alt="Lab Logo" />
-			</div>
+			<!-- <div class="media-left pull-left" href="#"> -->
+						<!-- REPLACE THE LOGO HERE WITH YOUR  UNIVERSITY, LAB,
+				or COMPANY -->
+				<img id="adlogo" src="{{ server_location
+									  }}/static/images/university.png"
+					 alt="Lab Logo" style="width:50%;height:auto" />
+			<!-- </div> -->
 			<div class="media-body">
 
 							<!--
