added last of ilkers comments

--- a/psiturk/templates/ad.html
+++ b/psiturk/templates/ad.html
@@ -53,13 +53,12 @@
 	</head>
 	<body>
 		<div id="container-not-an-ad" class="media">
-			<!-- <div class="media-left pull-left" href="#"> -->
-						<!-- REPLACE THE LOGO HERE WITH YOUR  UNIVERSITY, LAB,
-				or COMPANY -->
+			<div  href="#">
 				<img id="adlogo" src="{{ server_location
 									  }}/static/images/university.png"
-					 alt="Lab Logo" style="width:50%;height:auto" />
-			<!-- </div> -->
+					 alt="Lab Logo" style="width:35%;height:auto" />
+				<hr>
+			</div>
 			<div class="media-body">
 
 							<!--
