--- a/psiturk/templates/consent.html
+++ b/psiturk/templates/consent.html
@@ -26,8 +26,7 @@
                 <div class="legal well">
 
                   <p>
-                    <b>Purpose:</b> We are conducting research on how we see,
-                    think about, and interact with objects and people in our physical environment.
+                    <b>Purpose:</b> We are conducting research on reasoning.
                   </p>
 
                   <p>
@@ -37,63 +36,59 @@
                   </p>
 
                   <p>
-                    <b>Procedures:</b> For each judgement, you will see an image
-                    or a brief video of static or moving objects and/or agents and
-                    your job is to make judgments about the objects or agents
-                    including the shape or positions of objects or the goals and
-                    actions of agents. You will receive $3.00 upon completing the experiment.
+                    <b>Procedures:</b> In each trial, you will view images and answer
+                    some range slider questions.
                   </p>
 
                   <p>
-                    <b>Risks and Benefits:</b> Completing this task poses no more
-                    risk of harm to you than do the experiences of everyday life
-                    (e.g., from working on a computer). Although this study will
-                    not benefit you personally, we hope it will contribute to the
-                    advancement of our understanding of the human mind.
+                    <b>Risks and Benefits:</b> Completing this task poses no
+                    more risk of harm to you than do the experiences of everyday
+                    life (e.g., from working on a computer). Although this study
+                    will not benefit you personally, it will contribute to the
+                    advancement of our understanding of human reasoning .
                   </p>
 
                   <p>
                     <b>Confidentiality:</b> All of the responses you provide
                     during this study will be anonymous. You will not be asked
                     to provide any identifying information, such as your name,
-                    in any of the questionnaires. Typically, only the researchers
-                    involved in this study and those responsible for research
-                    oversight will have access to the information you provide.
-                    However, we may also share the data with other researchers
-                    so that they can check the accuracy of our conclusions;
-                    this will not impact you because the data are anonymous.
+                    in any of the questionnaires. Typically, only the
+                    researchers involved in this study and those responsible for
+                    research oversight will have access to the information you
+                    provide. However, we may also share the data with other
+                    researchers so that they can check the accuracy of our
+                    conclusions; this will not impact you because the data are
+                    anonymous. The researcher will not know your name, and no
+                    identifying information will be connected to your survey
+                    answers in any way. The survey is therefore anonymous.
+                    However, your account is associated with an mTurk number
+                    that the researcher has to be able to see in order to pay
+                    you, and in some cases these numbers are associated with
+                    public profiles which could, in theory, be searched. For
+                    this reason, though the researcher will not be looking at
+                    anyone's public profiles, the fact of your participation in
+                    the research (as opposed to your actual survey responses) is
+                    technically considered "confidential" rather than truly
+                    anonymous.
+
                   </p>
 
-                  <p>
-                    The researcher will not know your name, and no identifying
-                    information will be connected to your survey answers in any
-                    way. The survey is therefore anonymous. However, your
-                    account is associated with an mTurk number that the
-                    researcher has to be able to see in order to pay you,
-                    and in some cases these numbers are associated with public
-                    profiles which could, in theory, be searched. For this reason,
-                    though the researcher will not be looking at anyone’s public
-                    profiles, the fact of your participation in the research
-                    (as opposed to your actual survey responses) is technically
-                    considered “confidential” rather than truly anonymous.
-                  </p>
 
                   <p>
                     <b>Voluntary Participation:</b> Your participation in this
                     study is voluntary. You are free to decline to participate,
                     to end your participation at any time for any reason, or to
-                    refuse to answer any individual question.
+                    refuse to answer any individual question. Questions: If you
+                    have any questions about this study, you may contact Mario
+                    Belledonne at mario.belledonne@yale.edu or Julian
+                    Jara-Ettinger at julian.jara-ettinger@yale.edu. If you would
+                    like to talk with someone other than the researchers to
+                    discuss problems or concerns, to discuss situations in the
+                    event that a member of the research team is not available,
+                    or to discuss your rights as a research participant, you may
+                    contact, and mention HSC number 2000020357
                   </p>
 
-                  <p>
-                    <b>Questions:</b> If you have any questions about this study,
-                    you may contact Ilker Yildirim at ilker.yildirim@yale.edu.
-                    If you would like to talk with someone other than the
-                    researchers to discuss problems or concerns, to discuss
-                    situations in the event that a member of the research team
-                    is not available, or to discuss your rights as a research
-                    participant, you may contact, and mention HSC number 2000025930:
-                  </p>
 
                   <dl>
                     <dd> Yale University Human Subjects Committee
