updated error page

--- a/psiturk/templates/error.html
+++ b/psiturk/templates/error.html
@@ -34,7 +34,7 @@
                         <p>
                             If you would like to receive partial compensation or feel you
                             have reached this page in error, please email
-                            <a href="mailto:ilkery@mit.edu">ilkery@mit.edu</a>
+                            <a href="mailto:cncl-participate@yale.edu">cncl-participate@yale.edu</a>
                             and send the following information:
                         </p>
                         <hr />
