--- a/psiturk/templates/exp.html
+++ b/psiturk/templates/exp.html
@@ -37,6 +37,7 @@
 		<!-- task.js is where you experiment code actually lives
 			for most purposes this is where you want to focus debugging, development, etc...
 		-->
+		<script src="/static/js/instructions.js" type="text/javascript"> </script>
 		<script src="/static/js/task.js" type="text/javascript"> </script>
 
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
