--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -4,21 +4,51 @@
 
 
     <div class="instructions well" id="instruct">
-
         Instuctions go here
-
     </div>
-
-
 
     <hr />
 
     <div id="full-container-sm">
-        <div id ="scale_region" style="background-color: white;"></div>
+        <div id="scale_region" style="background-color: white; display: none">
+            <span id="qspan">Move the slider to match the width of your card</span>
+            <input id="scale_slider" type="range" min="0" max="100" default="50" width="1500"/>
+        </div>
         <div id="moviescreen"></div>
 
-        <!-- <div id ="response_region" style="background-color: white;"></div> -->
-		    <div id ="response_region" style="background-color: white; margin=auto; align-self:center;text-align:center"></div>
+        <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
+            <br>
+            <div class="card">
+                <form id="trial_response" action="#">
+                    <b>Is the highlighted dot a target?</b><br>
+                    <label class="radio">
+                        <input id="yes_box" type="radio" name="radios">
+                        <span class="outer">
+                            <span class="inner">
+                            </span>
+                        </span>
+                        Yes
+                    </label>
+                    <label class="radio">
+                        <input id="nay_box" type="radio" name="radios">
+                        <span class="outer">
+                            <span class="inner">
+                            </span>
+                        </span>
+                        No
+                    </label>
+                </form>
+            </div>
+            <hr />
+            <div style="width:auto; margin:auto; text-align:center">
+                <span id="qspan">How hard was it to track all 4 targets? </span>
+                <br>
+                <input id="response_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>
+                <label class="pull-left"><i>None</i></label>
+                <label class="pull-center"><i>Somewhat</i></label>
+                <label class="pull-right"><i>A lot</i></label>
+            </div>
+        </div>
 
         <hr />
 
