--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -19,10 +19,10 @@
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
             <br>
             <div class="card">
-                <form id="trial_response" action="#">
+                <form id="target_response" action="#">
                     <b>Is the highlighted dot a target?</b><br>
                     <label class="radio">
-                        <input id="yes_box" type="radio" name="radios">
+                        <input id="yes_target" type="radio" name="radios">
                         <span class="outer">
                             <span class="inner">
                             </span>
@@ -30,7 +30,7 @@
                         Yes
                     </label>
                     <label class="radio">
-                        <input id="nay_box" type="radio" name="radios">
+                        <input id="no_target" type="radio" name="radios">
                         <span class="outer">
                             <span class="inner">
                             </span>
@@ -40,14 +40,35 @@
                 </form>
             </div>
             <hr />
-            <div style="width:auto; margin:auto; text-align:center">
-                <span id="qspan">How hard was it to track all 4 targets? </span>
-                <br>
-                <input id="response_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>
-                <label class="pull-left"><i>None</i></label>
-                <label class="pull-center"><i>Somewhat</i></label>
-                <label class="pull-right"><i>A lot</i></label>
+            <div class="card">
+                <form id="probe_response" action="#">
+                    <b>Did you see the probe?</b><br>
+                    <label class="radio">
+                        <input id="yes_probe" type="radio" name="radios">
+                        <span class="outer">
+                            <span class="inner">
+                            </span>
+                        </span>
+                        Yes
+                    </label>
+                    <label class="radio">
+                        <input id="no_probe" type="radio" name="radios">
+                        <span class="outer">
+                            <span class="inner">
+                            </span>
+                        </span>
+                        No
+                    </label>
+                </form>
             </div>
+            <!--<div style="width:auto; margin:auto; text-align:center">-->
+                <!--<span id="qspan">How hard was it to track all 4 targets? </span>-->
+                <!--<br>-->
+                <!--<input id="response_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>-->
+                <!--<label class="pull-left"><i>None</i></label>-->
+                <!--<label class="pull-center"><i>Somewhat</i></label>-->
+                <!--<label class="pull-right"><i>A lot</i></label>-->
+            <!--</div>-->
         </div>
 
         <hr />
