first steps rotating the stimuli

--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -3,7 +3,7 @@
     <div id="moviescreen">
     </div>
 
-	  <div id="register">
+	  <div id="register" style="width: 0">
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
             <br>
             <div class="card">
