padding done, now need to rotate

--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -1,9 +1,9 @@
-<div id="full-container">
+<div id="full-container" style="width: 100%">
 	<br>
-    <div id="moviescreen">
+    <div id="moviescreen" style="margin: 0 auto; background-color: #6c7ff0">
     </div>
 
-	  <div id="register" style="width: 0">
+    <div id="register" style="margin: 0 auto">
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
             <br>
             <div class="card">
