rotation basically done

--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -10,13 +10,13 @@
     <hr />
 
     <!--<div id="full-container-sm">-->
-    <div id="full-container" style="width:100%">
+    <div id="full-container">
         <div id="scale_region" style="background-color: white; display: none">
             <span id="qspan">Move the slider to match the width of your card</span>
             <input id="scale_slider" type="range" min="0" max="100" default="50" width="1500"/>
         </div>
 
-        <div id="moviescreen" style="margin: 0 auto; background-color: #6c7ff0">
+        <div id="moviescreen">
         </div>
 
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
