--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -1,6 +1,6 @@
-<div id="full-container" style="width: 100%">
+<div id="full-container">
 	<br>
-    <div id="moviescreen" style="margin: 0 auto; background-color: #6c7ff0">
+    <div id="moviescreen">
     </div>
 
     <div id="register" style="margin: 0 auto">
