ready for debugging

--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -11,7 +11,7 @@
 
     <!--<div id="full-container-sm">-->
     <div id="full-container">
-        <div id="scale_region" style="background-color: white; display: none">
+        <div id="scale_region" style="background-color: white; display: none; margin: 0 auto">
             <span id="qspan">Move the slider to match the width of your card</span>
             <input id="scale_slider" type="range" min="0" max="100" default="50" width="1500"/>
         </div>
@@ -45,7 +45,7 @@
             <hr />
             <div class="card">
                 <form id="probe_response" action="#">
-                    <b>Did you see the probe?</b><br>
+                    <b>Did you see a probe?</b><br>
                     <label class="radio">
                         <input id="yes_probe" type="radio" name="radios">
                         <span class="outer">
