--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -30,7 +30,7 @@
             <hr />
             <div class="card">
                 <form id="probe_response" action="#">
-                    <b>Did you see the probe?</b><br>
+                    <b>Did you see a probe?</b><br>
                     <label class="radio">
                         <input id="yes_probe" type="radio" name="radios">
                         <span class="outer">
