--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -23,7 +23,7 @@
             <br>
             <div class="card">
                 <form id="target_response" action="#">
-                    <b>Is the highlighted dot a target?</b><br>
+                    <b>Is the <span style="background-color:#f5eb76;">highlighted</span> dot a <span style="background-color: #96b2ff">target</span>?</b><br>
                     <label class="radio">
                         <input id="yes_target" type="radio" name="radios">
                         <span class="outer">
@@ -45,7 +45,7 @@
             <hr />
             <div class="card">
                 <form id="probe_response" action="#">
-                    <b>Did you see a probe?</b><br>
+                    <b>Did you see a <span style="background-color: #d9a677">probe</span>?</b><br>
                     <label class="radio">
                         <input id="yes_probe" type="radio" name="radios">
                         <span class="outer">
