aws debug edits

--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -8,7 +8,7 @@
             <br>
             <div class="card">
                 <form id="target_response" action="#">
-                    <b>Is the <span style="background-color:#f5eb76;">highlighted</span> dot a <span style="background-color: #96b2ff">target</span>?</b><br>
+                    <b>Is the highlighted dot a <span style="color:blue">target</span>?</b><br>
                     <label class="radio">
                         <input id="yes_target" type="radio" name="radios">
                         <span class="outer">
@@ -30,7 +30,7 @@
             <hr />
             <div class="card">
                 <form id="probe_response" action="#">
-                    <b>Did you see a <span style="background-color: #d9a677">probe</span>?</b><br>
+                    <b>Did you see a <span style="color:#e09b88">probe</span>?</b><br>
                     <label class="radio">
                         <input id="yes_probe" type="radio" name="radios">
                         <span class="outer">
