--- a/psiturk/templates/quiz.html
+++ b/psiturk/templates/quiz.html
@@ -20,11 +20,9 @@
                 Which of the following is <b>true</b>:
               <select id="trueFalse1" name="featureAttend">
                 <option value="noresp" SELECTED></option>
-            		<option value="a">The blue dot is always one of the initially
-            		highlighted four targets</option>
+            		<option value="a">The dot circled in yellow at the end is always one of the four targets</option>
             		<option value="b">The number of dots in a video changes</option>
-            		<option value="c">All of the dots are present throughout the
-            		video </option>
+            		<option value="c">The main task is to track the four targets</option>
               </select>
               </p>
             </div>
