new experimental design done

--- a/psiturk/templates/instructions/instructions.html
+++ b/psiturk/templates/instructions/instructions.html
@@ -4,7 +4,7 @@
 
 
     <div class="instructions well" id="instruct">
-        Instuctions go here
+        Instructions go here
     </div>
 
     <hr />
@@ -22,10 +22,17 @@
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
             <br>
             <div class="card">
-                <form id="target_response" action="#">
-                    <b>Is the highlighted dot a <span style="color:blue">target</span>?</b><br>
+                <form id="response_form" action="#">
+
+                    <span id="td_question" style="display:none">
+                        <b>Is the highlighted dot a <span style="color:blue">target</span>?</b><br>
+                    </span>
+                    <span id="pr_question" style="display:none">
+                        <b>Did you see a <span style="color:#e09b88">probe</span>?</b><br>
+                    </span>
+
                     <label class="radio">
-                        <input id="yes_target" type="radio" name="radios">
+                        <input id="yes" type="radio" name="radios">
                         <span class="outer">
                             <span class="inner">
                             </span>
@@ -33,7 +40,7 @@
                         Yes
                     </label>
                     <label class="radio">
-                        <input id="no_target" type="radio" name="radios">
+                        <input id="no" type="radio" name="radios">
                         <span class="outer">
                             <span class="inner">
                             </span>
@@ -41,29 +48,7 @@
                         No
                     </label>
                 </form>
-            </div>
-            <hr />
-            <div class="card">
-                <form id="probe_response" action="#">
-                    <b>Did you see a <span style="color:#e09b88">probe</span>?</b><br>
-                    <label class="radio">
-                        <input id="yes_probe" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        Yes
-                    </label>
-                    <label class="radio">
-                        <input id="no_probe" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        No
-                    </label>
-                </form>
-            </div>
+
             <!--<div style="width:auto; margin:auto; text-align:center">-->
                 <!--<span id="qspan">How hard was it to track all 4 targets? </span>-->
                 <!--<br>-->
