wow everything so clean now!

--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -1,7 +1,14 @@
-<div id="full-container">
+<div class="instructions well" id="message"></div>
+
+<div id="full-container" style="width: 100%">
+        <div id="scale_region" style="background-color: white; display: none; margin: 0 auto">
+            <span id="qspan">Move the slider to match the width of your card</span>
+            <input id="scale_slider" type="range" min="0" max="100" default="50" width="1500"/>
+        </div>
 	<br>
-    <div id="moviescreen">
+    <div id="mediascreen">
     </div>
+
 
     <div id="register" style="margin: 0 auto">
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
