--- a/psiturk/templates/exp.html
+++ b/psiturk/templates/exp.html
@@ -32,6 +32,7 @@
 
 		<!-- utils.js and psiturk.js provide the basic psiturk functionality -->
 		<script src="/static/js/utils.js" type="text/javascript"> </script>
+		<script src="/static/js/page.js" type="text/javascript"> </script>
 		<script src="/static/js/psiturk.js" type="text/javascript"> </script>
 
 		<!-- task.js is where you experiment code actually lives
