--- a/psiturk/templates/instructions.html
+++ b/psiturk/templates/instructions.html
@@ -2,21 +2,16 @@
 
     <h1 id="instr_header">Instructions</h1>
 
+    <div class="instructions well" id="message"></div>
+    <hr/>
 
-    <div class="instructions well" id="instruct">
-        Instructions go here
-    </div>
-
-    <hr />
-
-    <!--<div id="full-container-sm">-->
-    <div id="full-container">
+    <div id="full-container" style="width: 100%">
         <div id="scale_region" style="background-color: white; display: none; margin: 0 auto">
             <span id="qspan">Move the slider to match the width of your card</span>
             <input id="scale_slider" type="range" min="0" max="100" default="50" width="1500"/>
         </div>
 
-        <div id="moviescreen">
+        <div id="mediascreen">
         </div>
 
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
