back to experiment 1.1, but cleaner code

--- a/psiturk/templates/instructions.html
+++ b/psiturk/templates/instructions.html
@@ -17,17 +17,12 @@
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
             <br>
             <div class="card">
-                <form id="response_form" action="#">
-
-                    <span id="td_question" style="display:none">
+                <form id="td_response_form" action="#">
+                    <span id="td_question">
                         <b>Is the highlighted dot a <span style="color:blue">target</span>?</b><br>
                     </span>
-                    <span id="pr_question" style="display:none">
-                        <b>Did you see a <span style="color:#e09b88">probe</span>?</b><br>
-                    </span>
-
                     <label class="radio">
-                        <input id="yes" type="radio" name="radios">
+                        <input id="td_yes" type="radio" name="radios">
                         <span class="outer">
                             <span class="inner">
                             </span>
@@ -35,7 +30,30 @@
                         Yes
                     </label>
                     <label class="radio">
-                        <input id="no" type="radio" name="radios">
+                        <input id="td_no" type="radio" name="radios">
+                        <span class="outer">
+                            <span class="inner">
+                            </span>
+                        </span>
+                        No
+                    </label>
+                </form>
+
+                <form id="pr_response_form" action="#">
+                    <span id="pr_question">
+                        <b>Did you see a <span style="color:#e09b88">probe</span>?</b><br>
+                    </span>
+
+                    <label class="radio">
+                        <input id="pr_yes" type="radio" name="radios">
+                        <span class="outer">
+                            <span class="inner">
+                            </span>
+                        </span>
+                        Yes
+                    </label>
+                    <label class="radio">
+                        <input id="pr_no" type="radio" name="radios">
                         <span class="outer">
                             <span class="inner">
                             </span>
