first steps in animation

--- a/psiturk/templates/instructions.html
+++ b/psiturk/templates/instructions.html
@@ -14,6 +14,9 @@
         <div id="mediascreen">
         </div>
 
+        <canvas id="animation" style="width: 100%; margin: 0 auto; display: block;">
+        </canvas>
+
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
             <br>
             <div class="card">
