--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -6,9 +6,13 @@
             <input id="scale_slider" type="range" min="0" max="100" default="50" width="1500"/>
         </div>
 	<br>
+
     <div id="mediascreen">
     </div>
 
+
+    <canvas id="animation" style="width: 100%; margin: 0 auto; background: linear-gradient(#000, #151515); display: block;">
+    </canvas>
 
     <div id="register" style="margin: 0 auto">
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
