--- a/psiturk/templates/exp.html
+++ b/psiturk/templates/exp.html
@@ -39,6 +39,7 @@
 			for most purposes this is where you want to focus debugging, development, etc...
 		-->
 		<script src="/static/js/instructions.js" type="text/javascript"> </script>
+		<script src="/static/js/animation.js" type="text/javascript"> </script>
 		<script src="/static/js/task.js" type="text/javascript"> </script>
 
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
