--- a/psiturk/templates/exp.html
+++ b/psiturk/templates/exp.html
@@ -32,6 +32,8 @@
 
 		<!-- utils.js and psiturk.js provide the basic psiturk functionality -->
 		<script src="/static/js/utils.js" type="text/javascript"> </script>
+        <script src="/static/js/deps/anime/lib/anime.min.js"></script>
+		<script src="/static/js/dot_animation.js" type="text/javascript"> </script>
 		<script src="/static/js/page.js" type="text/javascript"> </script>
 		<script src="/static/js/psiturk.js" type="text/javascript"> </script>
 
@@ -39,7 +41,6 @@
 			for most purposes this is where you want to focus debugging, development, etc...
 		-->
 		<script src="/static/js/instructions.js" type="text/javascript"> </script>
-		<script src="/static/js/animation.js" type="text/javascript"> </script>
 		<script src="/static/js/task.js" type="text/javascript"> </script>
 
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
@@ -48,6 +49,8 @@
         <link rel="stylesheet" href="/static/css/task.css" type="text/css" />
         <link rel="stylesheet" href="/static/css/slider.css" type="text/css" />
         <link rel="stylesheet" href="/static/css/radio.css" type="text/css" />
+
+        <link rel="stylesheet" href="/static/css/dot.css" type="text/css" />
 
     </head>
     <body>
