--- a/psiturk/static/css/dot.css
+++ b/psiturk/static/css/dot.css
@@ -1,7 +1,13 @@
 .dot {
-  height: 40px;
-  width: 40px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
