--- a/psiturk/templates/exp.html
+++ b/psiturk/templates/exp.html
@@ -50,7 +50,7 @@
         <link rel="stylesheet" href="/static/css/slider.css" type="text/css" />
         <link rel="stylesheet" href="/static/css/radio.css" type="text/css" />
 
-        <link rel="stylesheet" href="/static/css/dot.css" type="text/css" />
+        <link rel="stylesheet" href="/static/css/dots_probes.css" type="text/css" />
 
     </head>
     <body>
