selection and going next

--- a/psiturk/templates/instructions.html
+++ b/psiturk/templates/instructions.html
@@ -15,52 +15,7 @@
         </div>
 
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
-            <br>
-            <div class="card">
-                <form id="td_response_form" action="#">
-                    <span id="td_question">
-                        <b>Is the highlighted dot a <span style="color:blue">target</span>?</b><br>
-                    </span>
-                    <label class="radio">
-                        <input id="td_yes" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        Yes
-                    </label>
-                    <label class="radio">
-                        <input id="td_no" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        No
-                    </label>
-                </form>
-
-                <form id="pr_response_form" action="#">
-                    <span id="pr_question">
-                        <b>Did you see a <span style="color:#e09b88">probe</span>?</b><br>
-                    </span>
-
-                    <label class="radio">
-                        <input id="pr_yes" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        Yes
-                    </label>
-                    <label class="radio">
-                        <input id="pr_no" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        No
-                    </label>
-                </form>
+            <b> SELECT THE <span style="color:red">TARGETS</span>!!!!!<b>
 
             <!--<div style="width:auto; margin:auto; text-align:center">-->
                 <!--<span id="qspan">How hard was it to track all 4 targets? </span>-->
