--- a/psiturk/templates/instructions.html
+++ b/psiturk/templates/instructions.html
@@ -14,8 +14,10 @@
         <div id="mediascreen">
         </div>
 
+        <hr />
+
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
-            <b> SELECT THE <span style="color:red">TARGETS</span>!!!!!<b>
+            <span id="query"><b> SELECT THE <span style="color:red">TARGETS</span> NOW!!!!!<b></span>
 
             <!--<div style="width:auto; margin:auto; text-align:center">-->
                 <!--<span id="qspan">How hard was it to track all 4 targets? </span>-->
