--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -11,57 +11,20 @@
     </div>
 
 
-    <canvas id="animation" style="width: 100%; margin: 0 auto; background: linear-gradient(#000, #151515); display: block;">
-    </canvas>
-
     <div id="register" style="margin: 0 auto">
+		<hr />
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
-            <br>
-            <div class="card">
-                <form id="td_response_form" action="#">
-                    <span id="td_question">
-                        <b>Is the highlighted dot a <span style="color:blue">target</span>?</b><br>
-                    </span>
-                    <label class="radio">
-                        <input id="td_yes" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        Yes
-                    </label>
-                    <label class="radio">
-                        <input id="td_no" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        No
-                    </label>
-                </form>
+            <span id="query"><b> SELECT THE <span style="color:red">TARGETS</span> NOW!!!!!<b></span>
 
-                <form id="pr_response_form" action="#">
-                    <span id="pr_question">
-                        <b>Did you see a <span style="color:#e09b88">probe</span>?</b><br>
-                    </span>
-
-                    <label class="radio">
-                        <input id="pr_yes" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        Yes
-                    </label>
-                    <label class="radio">
-                        <input id="pr_no" type="radio" name="radios">
-                        <span class="outer">
-                            <span class="inner">
-                            </span>
-                        </span>
-                        No
-                    </label>
-                </form>
+            <!--<div style="width:auto; margin:auto; text-align:center">-->
+                <!--<span id="qspan">How hard was it to track all 4 targets? </span>-->
+                <!--<br>-->
+                <!--<input id="response_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>-->
+                <!--<label class="pull-left"><i>None</i></label>-->
+                <!--<label class="pull-center"><i>Somewhat</i></label>-->
+                <!--<label class="pull-right"><i>A lot</i></label>-->
+            <!--</div>-->
+        </div>
 
 		    <hr />
 		    <div id="centerdiv">
