--- a/psiturk/templates/instructions.html
+++ b/psiturk/templates/instructions.html
@@ -17,7 +17,12 @@
         <hr />
 
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
-            <span id="query"><b> SELECT THE <span style="color:red">TARGETS</span> NOW!!!!!<b></span>
+            <span id="query">
+                <b>
+                    Select the <span style="color:#e60000">targets <span class="dot" style="background-color:#e60000; position: relative; height: 20px; width: 20px"></span></span>.<br>
+                    Remember to press SPACEBAR whenever you see a probe <span class="probe" style="position: relative; opacity: 1.0; height: 10px; width: 10px"></span> .
+                <b>
+            </span>
 
             <!--<div style="width:auto; margin:auto; text-align:center">-->
                 <!--<span id="qspan">How hard was it to track all 4 targets? </span>-->
