--- a/psiturk/static/css/dots_probes.css
+++ b/psiturk/static/css/dots_probes.css
@@ -14,9 +14,9 @@
 
 
 .probe {
-    height: 20px;
-    width: 20px;
-    background-color: black;
+    height: 10px;
+    width: 10px;
+    background-color: #adadad;
     display: inline-block;
     opacity: 0.0;
 
@@ -28,8 +28,8 @@
 }
 
 .query-dot {
-    height: 20px;
-    width: 20px;
+    height: 10px;
+    width: 10px;
     background-color: #e60000;
     border-radius: 50%;
     display: inline-block;
