--- a/psiturk/templates/instructions.html
+++ b/psiturk/templates/instructions.html
@@ -20,7 +20,9 @@
             <span id="query">
                 <b>
                     Select the <span style="color:#e60000">targets <span class="dot" style="background-color:#e60000; position: relative; height: 20px; width: 20px"></span></span>.<br>
-                    Remember to press SPACEBAR whenever you see a probe <span class="probe" style="position: relative; opacity: 1.0; height: 10px; width: 10px"></span> .
+                    <span style="color: gray">
+                        (remember to hit SPACEBAR whenever you see a probe <span class="probe" style="position: relative; opacity: 1.0; height: 10px; width: 10px"></span> during the movement)
+                    </span>
                 <b>
             </span>
 
