--- a/psiturk/static/css/dots_probes.css
+++ b/psiturk/static/css/dots_probes.css
@@ -1,7 +1,7 @@
 .dot {
     height: 40px;
     width: 40px;
-    background-color: #bbb;
+    background-color: rgb(180, 180, 180);
     border-radius: 50%;
     display: inline-block;
 
@@ -16,7 +16,7 @@
 .probe {
     height: 10px;
     width: 10px;
-    background-color: #adadad;
+    background-color: #bbb;
     display: inline-block;
     opacity: 0.0;
 
