--- a/psiturk/static/css/dots_probes.css
+++ b/psiturk/static/css/dots_probes.css
@@ -46,3 +46,15 @@
     opacity: 1.0;
     position: relative;
 }
+
+.probe-indicator {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+
+    background-color: rgba(0, 0, 0, 0);
+    border-style: dashed;
+    border-color: red;
+}
