--- a/psiturk/templates/quiz.html
+++ b/psiturk/templates/quiz.html
@@ -20,7 +20,7 @@
                 Which of the following is <b>true</b>:
               <select id="trueFalse1" name="featureAttend">
                 <option value="noresp" SELECTED></option>
-            		<option value="a">The dot circled in yellow at the end is always one of the four targets</option>
+            		<option value="a">You need to press CTRL when you see a probe.</option>
             		<option value="b">The number of dots in a video changes</option>
             		<option value="c">The main task is to track the four targets</option>
               </select>
@@ -32,9 +32,9 @@
                   Which of the following statements is <b>false</b>:
               <select id="trueFalse2" name="constantObj">
                 <option value="noresp" SELECTED></option>
-                <option value="a">Each video will only play once</option>
+                <option value="a">You need to press SPACEBAR whenever you see a probe</option>
                 <option value="b">Maintain an arm-length distance from your monitor</option>
-                <option value="c">Some trials will have 9 dots</option>
+                <option value="c">Probes can appear anywhere on the screen</option>
               </select>
               </p>
             </div>
