minor changes before pilot

--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -18,7 +18,7 @@
                 <b>
                     Select the <span style="color:#e60000">targets <span class="dot" style="background-color:#e60000; position: relative; height: 20px; width: 20px"></span></span>.<br>
                     <span style="color: gray; display: none" id="probe_reminder">
-                        (remember to continuously press SPACEBAR to indicate how difficult it is to track the targets at that moment)
+                        (remember to press SPACEBAR throughout the movement to indicate how difficult it is to track the targets at that moment)
                     </span>
                 <b>
             </span>
