--- a/psiturk/templates/quiz.html
+++ b/psiturk/templates/quiz.html
@@ -32,7 +32,7 @@
                   Which of the following statements is <b>false</b>:
               <select id="trueFalse2" name="constantObj">
                 <option value="noresp" SELECTED></option>
-                <option value="a">You need to continuously press SPACEBAR to indicate difficulty</option>
+                <option value="a">You need to press SPACEBAR throughout to indicate difficulty</option>
                 <option value="b">Maintain an arm-length distance from your monitor</option>
                 <option value="c">The screen will turn GREEN to show what difficulty you're reporting</option>
               </select>
