--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -17,21 +17,21 @@
             <span id="query">
                 <b>
                     Select the <span style="color:#e60000">targets <span class="dot" style="background-color:#e60000; position: relative; height: 20px; width: 20px"></span></span>.<br>
-                    <span style="color: gray; display: none" id="probe_reminder">
+                    <span style="color: gray; display: none" id="reminder">
                         (remember to press SPACEBAR throughout the movement to indicate how difficult it is to track the targets at that moment)
                     </span>
                 <b>
             </span>
 
+            <div style="width:auto; margin:auto; text-align:center" id="difficulty_slider">
+                <span>How hard was it to track all 4 targets? </span>
+                <br>
+                <input id="difficulty_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>
+                <label class="pull-left"><i>None</i></label>
+                <label class="pull-center"><i>Somewhat</i></label>
+                <label class="pull-right"><i>A lot</i></label>
+            </div>
 
-            <!--<div style="width:auto; margin:auto; text-align:center">-->
-                <!--<span id="qspan">How hard was it to track all 4 targets? </span>-->
-                <!--<br>-->
-                <!--<input id="response_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>-->
-                <!--<label class="pull-left"><i>None</i></label>-->
-                <!--<label class="pull-center"><i>Somewhat</i></label>-->
-                <!--<label class="pull-right"><i>A lot</i></label>-->
-            <!--</div>-->
         </div>
 
 		    <hr />
