exp3_polygons pilot ready for prolific

--- a/psiturk/templates/instructions.html
+++ b/psiturk/templates/instructions.html
@@ -11,6 +11,8 @@
         </div>
 
         <div id="mediascreen">
+            <svg id="polygon_svg">
+            </svg>
         </div>
 
         <hr />
