--- a/psiturk/templates/quiz.html
+++ b/psiturk/templates/quiz.html
@@ -20,9 +20,9 @@
                 Which of the following is <b>true</b>:
               <select id="trueFalse1" name="featureAttend">
                 <option value="noresp" SELECTED></option>
-            		<option value="a">You need to press CTRL when you see a probe.</option>
-            		<option value="b">The number of dots in a video changes</option>
-            		<option value="c">The main task is to track the four targets</option>
+            		<option value="a">At the beginning of each instance, targets are indicated in blue</option>
+            		<option value="b">The number of dots in each instance remains the same</option>
+            		<option value="c">The task is to indicate which dots are targets</option>
               </select>
               </p>
             </div>
@@ -32,9 +32,9 @@
                   Which of the following statements is <b>false</b>:
               <select id="trueFalse2" name="constantObj">
                 <option value="noresp" SELECTED></option>
-                <option value="a">You need to press SPACEBAR whenever you see a probe</option>
+                <option value="a">You can select targets by clicking or drawing on them with your mouse</option>
                 <option value="b">Maintain an arm-length distance from your monitor</option>
-                <option value="c">Probes can appear anywhere on the screen</option>
+                <option value="c">You can't deselect targets that are already selected</option>
               </select>
               </p>
             </div>
