exp1-difficulty pilot ready

--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -26,14 +26,14 @@
             </span>
 
 
-            <!--<div style="width:auto; margin:auto; text-align:center">-->
-                <!--<span id="qspan">How hard was it to track all 4 targets? </span>-->
-                <!--<br>-->
-                <!--<input id="response_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>-->
-                <!--<label class="pull-left"><i>None</i></label>-->
-                <!--<label class="pull-center"><i>Somewhat</i></label>-->
-                <!--<label class="pull-right"><i>A lot</i></label>-->
-            <!--</div>-->
+            <div style="width:auto; margin:auto; text-align:center">
+                <span id="qspan">How hard was it to track all 4 targets? </span>
+                <br>
+                <input id="response_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>
+                <label class="pull-left"><i>None</i></label>
+                <label class="pull-center"><i>Somewhat</i></label>
+                <label class="pull-right"><i>A lot</i></label>
+            </div>
         </div>
 
 		    <hr />
